--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,20 @@
             <version>0.7</version>
         </dependency>
 
+        <!-- OSC -->
+        <dependency>
+            <groupId>com.illposed.osc</groupId>
+            <artifactId>javaosc-core</artifactId>
+            <version>0.3</version>
+        </dependency>
+
+        <!-- Web Services -->
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
