--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.amarantha</groupId>
     <artifactId>amarantha-utils</artifactId>
-    <version>1.0.0</version>
+    <version>2.0.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -33,6 +33,13 @@
             <groupId>com.illposed.osc</groupId>
             <artifactId>javaosc-core</artifactId>
             <version>0.3</version>
+        </dependency>
+
+        <!-- YAML -->
+        <dependency>
+            <groupId>com.esotericsoftware.yamlbeans</groupId>
+            <artifactId>yamlbeans</artifactId>
+            <version>1.08</version>
         </dependency>
 
         <!-- Web Services -->
